Thu Sep 26 05:32:46 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.cc: If we get EACCES trying to read a directory or stat
	  a file, don't handle it by committing changes and exiting - instead
	  skip the file (like we used to before r17461).

Tue Sep 24 10:01:17 GMT 2013  Olly Betts <olly@survex.com>

	* .gitignore,configure.ac,xapian-omega.spec.in: Compress source
	  tarballs with xz instead of gzip.

Mon Sep 23 06:26:03 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,omindex.cc: If we get ENOTDIR trying to index a
	  file, skip it quietly (unless in verbose mode) as we already do if
	  we get ENOENT, since ENOTDIR is what we get if the file and the
	  directory it was in got removed between us getting the filename and
	  trying to open it.

Mon Sep 16 11:21:50 GMT 2013  Olly Betts <olly@survex.com>

	* runfilter.h: Remove trailing space added in recent commit.

Mon Sep 16 02:04:06 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.h,runfilter.cc,runfilter.h: Pass error message string and
	  errno value in ReadError exceptions.

Thu Sep 12 22:02:59 GMT 2013  Olly Betts <olly@survex.com>

	* weight.cc: Use "" not <> to include local header weight.h.

Thu Sep 12 01:18:33 GMT 2013  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,omindex.cc: Commit changes and exit, rather
	  than skipping the current file on most unexpected errors reading
	  directories or initialising libmagic - otherwise we can end up
	  deleting a lot of database entries on errors like EHOSTDOWN.

Tue Sep 03 01:03:33 GMT 2013  Olly Betts <olly@survex.com>

	* myhtmlparse.cc,myhtmlparse.h,omindex.cc: Add support for indexing
	  'created' time from HTML documents.

Mon Sep 03 00:23:34 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Factor out mimetype_from_ext() function.

Mon Sep 02 23:32:01 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Fix to sleep for sleep_before_opendir from now, not
	  from 1970.
